--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,60 +1,30 @@
 ---
-title: Introduction
+title: Next Level3 Identity Protection
 description: 'Next Level3 Documentation'
 ---
 
-## Setting up
+## Next Level3 - Company Portal
 
-The first step to world-class documentation is setting up your editing environnments.
+The Next Level3 Company Portal provides companies with the ability to manage their JIT Access application integrations, Manage Identity for Enabled Users, Monitor Authentication traffic, and Manage Cyber Policies.
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development.
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect.
-  </Card>
-</CardGroup>
+## Securing your Devices and Accounts
 
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
+### Start by signing up or signing in
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Mobile Devices"
+    icon="fa-sharp fa-regular fa-mobile"
+    href="https://mintlify.com/docs/MobileDocs"
   >
-    Customize your docs to your company's colors and brands.
+    Supports iOS and Android devices.
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    title="Desktop Browser"
+    icon="fa-duotone fa-browser"
+    href="https://mintlify.com/docs/WebDocs"
   >
-    Automatically generate endpoints from an OpenAPI spec.
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users.
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/showcase"
-  >
-    Check out our showcase of our favorite documentation.
+    Access the company portal on your PC.
   </Card>
 </CardGroup>
+
