--- a/introduction.mdx
+++ b/introduction.mdx
@@ -14,15 +14,15 @@ The Next Level3 Company Portal provides companies with the ability to manage the
 <CardGroup cols={2}>
   <Card
     title="Mobile Devices"
-    icon="fa-sharp fa-regular fa-mobile"
-    href="https://mintlify.com/docs/MobileDocs"
+    icon={mobile-screen-button-solid}
+    href="/MobileDocs"
   >
     Supports iOS and Android devices.
   </Card>
   <Card
     title="Desktop Browser"
-    icon="fa-duotone fa-browser"
-    href="https://mintlify.com/docs/WebDocs"
+    icon={desktop-solid}
+    href="/WebDocs"
   >
     Access the company portal on your PC.
   </Card>
