--- a/ALP.mdx
+++ b/ALP.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'Cyber Policies and Activity Logs'
+title: 'Next Level3 Cyber Policies and Activity Logs'
 description: 'Managing Policies and Monitoring Activity'
 ---
-##Cyber Policies
-###Using Cyber Policies
 
-Cyber Policies are used to control access to application accounts and managed that access for a companies users (employees, contractors, third parties and customers). There are a  number of use cases for a variety of industries in which Cyber Policies provide solutions to solve problems. This document will outline each of the Cyber Policy types available today and will define how to create, use and manage cyber policies using the Next Level3 Company management portal.
+##Cyber Policies
+
+Cyber Policies are used to control access to application accounts and managed that access for a companies users (employees, contractors, third parties and customers). There are a number of use cases for a variety of industries in which Cyber Policies provide solutions to solve problems. This document will outline each of the Cyber Policy types available today and will define how to create, use, and manage cyber policies using the Next Level3 Company Portal.
 
 ###Accessing Cyber Policies
 Requirements: Admin Level Next Level3 Company Account Access.
@@ -15,7 +15,7 @@ Login to [company.nextlevel3.com](https://company.nextlevel3.com) and navigate t
 ##Cyber Policy Creation
 
 ###Policy Types
-Currently, there are three policy types supported by the Next Level3 platform including;
+Currently, there are three policy types supported by the Next Level3 Cloud Identity JIT Access platform including;
 
     - Scheduled Policies – Policies triggered at a scheduled time.
     - Multi-Approval Policies – Policies requiring more than one user to approve unlocking an account prior to account unlock.
@@ -163,4 +163,3 @@ Filter By Name: You can filter the current results on the page by username.
 Search By Name: You can search the logs of all records by username.
 
 [Activity](/images/Activity.png)
-
