--- a/Integrations.mdx
+++ b/Integrations.mdx
@@ -13,7 +13,7 @@ description: 'Identity Service Providers and Native languages'
   src="https://company.nextlevel3.com/videos/NL3AmazonCognitoIntegration.mp4"
   ></video>
   
-  To get started first choose the identity provider your application is using and then follow the instructions to enable Next Level3 Cloud Identity JIT Access for that provider.
+  To get started first choose the identity provider your application uses and then follow the instructions to enable Next Level3 Cloud Identity JIT Access for that provider.
 
 ###Identity Provider Integration Instrcutions
   <Tabs>
@@ -1115,7 +1115,7 @@ description: 'Identity Service Providers and Native languages'
       </Tab>
     </Tabs>
 
-##Access Management
+##Step 4. Managing Access for your Company Portal Applications
 
 Next, you will need to set up Next Level Cloud Identity JIT Access for the endpoints, users, and groups that are associated with your application(s).
 
