--- a/AK.mdx
+++ b/AK.mdx
@@ -14,7 +14,7 @@ Adding an application to the portal will allow for Identity Provider Integration
 ></video>
 _*Please wait atleast 30 minutes before attempting to validate your application, results may vary, depending on your DNS hostname provider it could take longer to propagate_
 
-###Identity Provider Integrations
+###Step 3. Setting up your Company Portal Identity Provider Integrations
 The next step in setting up applications to check lock statuses is to implement Identity Provider Integrations.
 
 <Card title="Identity Provider Integrations" href="/Integrations">
