--- a/EUG.mdx
+++ b/EUG.mdx
@@ -25,13 +25,14 @@ After a user has been added they will have the following account set up options:
     </Card title="Web Browser" 
     href="https://company.nextlevel3.com" 
     icon="fa-sharp fa-regular fa-mobile">
-    Signing into the Company Portal using a web browser
+    Signing into the Company Portal using a web browser.
     </Card>
     </Card title="Mobile Device Application"
     href="/MobileDocs.mdx"
     icon="fa-duotone fa-browser">
-    Signing into the company portal using the Next Level3 Mobile app
+    Signing into the company portal using the Next Level3 Mobile app.
     </Card>
+</CardGroup>
 
 ##Enabling Users
 ###User Enablement
@@ -198,13 +199,11 @@ You will need:
     </Tab>
 </Tabs
 
-##Activity Logging and Cyber Policy
+##Step 5. Monitoring Activity and Managing Cyber Policies
 
 Once you have set up your integrations, the next step is utilizing the Activity Log and Cyber Policy features.
 
-Next Level3 Cloud Identity JIT Access allows you to set up cyber policies for your applications and monitor LOCKED/UNLOCKED application and account statuses, allowed/blocked login attempts, and cyber policy activity logs.
-
-<Card title="Activity Logs and Policies" href="/ALP.mdx">
+<Card title="Activity Logs and Cyber Policies" href="/ALP.mdx">
   Monitoring Activity and Managing Policies
 </Card>
 
