--- a/Introduction.mdx
+++ b/Introduction.mdx
@@ -1,5 +1,5 @@
 ---
-title: Next Level3 Identity Protection
+title: 'Next Level3 Identity Protection'
 description: 'Next Level3 Documentation'
 ---
 ##Welcome to Next Level3 Cloud Identity JIT Access
