--- a/Introduction.mdx
+++ b/Introduction.mdx
@@ -2,7 +2,7 @@
 title: 'Next Level3 Identity Protection'
 description: 'Next Level3 Documentation'
 ---
-##Welcome to Next Level3 Cloud Identity JIT Access
+## Welcome to Next Level3 Cloud Identity JIT Access
 
 Next Level3's Just-In-Time (JIT) Access is a revolutionary, highly secure MultiFactor Authentication (MFA) solution tailored to provide an impenetrable shield for your AWS environment against unauthorized intrusion and potential security breaches. This groundbreaking tool, focusing on bolstering cloud-based infrastructures, utilizes advanced MultiFactor Authentication (2FA, MFA) and Identity Verification methodologies to establish the pinnacle of security.
 
@@ -32,19 +32,19 @@ Explore the transformative potential of Next Level3's Just-In-Time Access, a fro
 
 Committed to delivering reliable security solutions, Next Level3's Just-In-Time Access employs state-of-the-art MultiFactor Authentication and advanced Identity Verification to significantly bolster your AWS environment's security. Step into a new era of AWS environment protection with our innovative approach to IAM, ensuring your cloud-based resources remain securely safeguarded from unauthorized access and potential threats.
 
-###Step 1. Choose your Device Type 
+### Step 1. Choose your Device Type 
 
 <CardGroup cols={2}>
   <Card
     title="Mobile Devices"
-    icon={mobile-screen-button-solid}
+    icon="/icons/mobile-screen-button-solid.svg"
     href="/Mobile User Guide.mdx"
   >
     Supports iOS and Android devices.
   </Card>
   <Card
     title="Desktop Browser"
-    icon={desktop-solid}
+    icon="/icons/desktop-solid.svg"
     href="/Desktop User Guide.mdx"
   >
     Access the company portal on your PC.
