--- a/Desktop User Guide.mdx
+++ b/Desktop User Guide.mdx
@@ -2,7 +2,7 @@
 title: 'Getting Started - Company Portal'
 description: 'Start Protecting your Identity Today'
 ---
-###Getting Started
+### Getting Started
 Watch the video below for a brief walkthrough of how to set up your Next Level3 Company Portal:
 
 <video
@@ -13,16 +13,16 @@ Watch the video below for a brief walkthrough of how to set up your Next Level3 
 
 To access the company portal visit: [company.nextlevel3.com](https://company.nextlevel3.com)
 
-##Next Level3 Cloud Identity JIT Access Service
+## Next Level3 Cloud Identity JIT Access Service
 
-###Dashboard
+### Dashboard
 The Next Level3 Dashboard allows you to monitor requests made for your company in real time. 
 
 To filter the dashboard view you can edit the filters listed at the top of the page. By clicking on pinpoints in the map, you can view details for each event that occurs.
 
-###Step 2. Setting up your Company Portal Applications and Signing Keys
+### Step 2. Setting up your Company Portal Applications and Signing Keys
 After signing into the portal and pairing your devices, the next step is setting up your companies applications and signing keys.
 
-<Card title="Applications and Signing Keys" href="/AK.mdx"> 
+<Card title="Applications and Signing Keys" href="/Features/Applications and Signing Keys.mdx"> 
   Protecting Applications, Domain validation, and Key Management
 </Card>
