--- a/Features/Cyber Policies and Activity Logs.mdx
+++ b/Features/Cyber Policies and Activity Logs.mdx
@@ -3,26 +3,26 @@ title: 'Cyber Policies and Activity Logs'
 description: 'Managing Policies and Monitoring Activity'
 ---
 
-##Cyber Policies
+## Cyber Policies
 
 Cyber Policies are used to control access to application accounts and managed that access for a companies users (employees, contractors, third parties and customers). There are a number of use cases for a variety of industries in which Cyber Policies provide solutions to solve problems. This document will outline each of the Cyber Policy types available today and will define how to create, use, and manage cyber policies using the Next Level3 Company Portal.
 
-###Accessing Cyber Policies
+### Accessing Cyber Policies
 Requirements: Admin Level Next Level3 Company Account Access.
 
 Login to [company.nextlevel3.com](https://company.nextlevel3.com) and navigate to "Management" –> "Cyber Policies".
 
-##Cyber Policy Creation
+## Cyber Policy Creation
 
-###Policy Types
+### Policy Types
 Currently, there are three policy types supported by the Next Level3 Cloud Identity JIT Access platform including;
 
     - Scheduled Policies – Policies triggered at a scheduled time.
     - Multi-Approval Policies – Policies requiring more than one user to approve unlocking an account prior to account unlock.
     - Alert Policies – Policies that are triggered when an alert occurs from an external system such as an EDR, IDR, SIEM tools, or other alert eventing system.
 <Tabs>
-    <Tab icon={clock-regular.svg} title="Scheduled">
-###Scheduled Policies
+    <Tab icon="icons/clock-regular.svg" title="Scheduled">
+### Scheduled Policies
 Scheduled policies are used to lock and unlock accounts at a specific time. They can be scheduled to run starting on a specific date and can optionally have an end date. To create a new scheduled policy, click the add new policy button in the Policy Manager.
 
 [policy](/images/policy1.png)
@@ -44,7 +44,7 @@ This will create a new policy and allow you to specify the following;
 
 [policy](/images/policy2.png)
 
-###Applying Scheduled Policies
+### Applying Scheduled Policies
 Once the Scheduled policy is created it can be applied. To apply the policy, you are selecting the list of users/group accounts that the scheduled policy will be applied to. To apply the policy, click the "Assign Groups to Policy" button on the Policy Management page for that policy.
 
 **EXAMPLE "ASSIGN GROUPS TO POLICY" ACTION**
@@ -57,9 +57,9 @@ You will then need to assign users and/or groups to the policy by selecting them
 
 [policy](/images/policy4.png)
     </Tab>
-    <Tab icon={circle-exclamation-solid.svg} title="Alert">
+    <Tab icon="/icons/circle-exclamation-solid.svg" title="Alert">
 
-###Alert Policies
+### Alert Policies
 Alert policies are designed to act as a safeguard in the event of scenarios such as:
 
     * An Intrusion is detected
@@ -85,7 +85,7 @@ This will create a new policy and allow you to specify the following;
 
 [policy](/images/policy5.png)
 
-###Applying Alert Policies
+### Applying Alert Policies
 Once the Alert policy is created it can be applied. To apply the policy, you are selecting the list of users/group accounts that the alert policy will be applied to. To apply the policy, click the "Assign Groups to Policy" button on the Policy Management page for that policy.
 
 **EXAMPLE "ASSIGN GROUPS TO POLICY" ACTION**
@@ -98,7 +98,7 @@ You will then need to assign users and/or groups to the policy by selecting them
 
 [policy](/images/policy7.png)
 
-###Executing Alert Policies
+### Executing Alert Policies
 **Manually**
 Alert policies can be executed directly in the Company Management portal by clicking the execute policy link for the policy.
 
@@ -115,8 +115,8 @@ Example API requestcurl –location –request POST ‘http://localhost:80/nl3/a
 –header ‘Content-Type: application/json’
 ```
 </Tab>
-<Tab icon={unlock-keyhole-solid.svg} title="Multi-Approval">
-###Multi-Approval Policies
+<Tab icon="/icons/unlock-keyhole-solid.svg" title="Multi-Approval">
+### Multi-Approval Policies
 Multi Approval policies enable you to define a secondary approver who must approve any unlock request for the accounts the policy is applied to. The flow works like this:
 
     1. John wants to login to his application using the root@mycompany.com account. John has already registered this account in his Next Level3 account and will receive an Unlock request which he must approve prior to being able to log in.
@@ -140,7 +140,7 @@ This will create a new policy and allow you to specify the following;
 
 [policy](/images/policy9.png)
 
-###Applying Multi-Approval Policies
+### Applying Multi-Approval Policies
 
 Once the Multi-Approval policy is created it can be applied. To apply the policy, you are selecting the list of users/group accounts for which secondary approval will be required prior to unlocking. To apply the policy, click the Assign Groups to Policy button on the Policy Management page for that policy.
 
@@ -154,8 +154,8 @@ You will then need to assign users and/or groups to the policy by selecting them
     </Tab>
 </Tabs>
 
-##Activity Logs
-###Reviewing Activity Logs
+## Activity Logs
+### Reviewing Activity Logs
 All activity for the Next Level3 Cloud Identity products is available for review for administrators with access to the Company Portal. It is also made available via the Cloud Identity API.
 
 Filter By Name: You can filter the current results on the page by username. 
