--- a/Desktop User Guide.mdx
+++ b/Desktop User Guide.mdx
@@ -23,6 +23,6 @@ To filter the dashboard view you can edit the filters listed at the top of the p
 ### Step 2. Setting up your Company Portal Applications and Signing Keys
 After signing into the portal and pairing your devices, the next step is setting up your companies applications and signing keys.
 
-<Card title="Applications and Signing Keys" href="docs/Features/Applications and Signing Keys.mdx"> 
+<Card title="Applications and Signing Keys" href="docs/Features/Applications and Signing Keys"> 
   Protecting Applications, Domain validation, and Key Management
 </Card>
