--- a/Introduction.mdx
+++ b/Introduction.mdx
@@ -38,14 +38,14 @@ Committed to delivering reliable security solutions, Next Level3's Just-In-Time 
   <Card
     title="Mobile Devices"
     icon="/icons/mobile-screen-button-solid.svg"
-    href="/docs/Mobile User Guide.mdx"
+    href="/docs/Mobile User Guide"
   >
     Supports iOS and Android devices.
   </Card>
   <Card
     title="Desktop Browser"
     icon="/icons/desktop-solid.svg"
-    href="/docs/Desktop User Guide.mdx"
+    href="/docs/Desktop User Guide"
   >
     Access the company portal on your PC.
   </Card>
