--- a/Features/Integrations.mdx
+++ b/Features/Integrations.mdx
@@ -1119,6 +1119,6 @@ description: 'Identity Service Providers and Native languages'
 
 Next, you will need to set up Next Level Cloud Identity JIT Access for the endpoints, users, and groups that are associated with your application(s).
 
-<Card title="Users, Groups, and Enpoints" href="/docs/Features/Users, Groups, and Endpoints">
+<Card title="Users, Groups, and Enpoints" href="/Features/Users, Groups, and Endpoints">
   Endpoint, User, and Group Management
 </Card>
