--- a/Features/Users, Groups, and Endpoints.mdx
+++ b/Features/Users, Groups, and Endpoints.mdx
@@ -23,12 +23,12 @@ After a user has been added they will have the following account set up options:
 
 <CardGroup>
     </Card title="Desktop Browser" 
-    href="/docs/Desktop User Guide" 
+    href="/Desktop User Guide" 
     icon="/icons/desktop-solid">
     Signing into the Company Portal using a web browser.
     </Card>
     </Card title="Mobile Device Application"
-    href="/docs/Mobile User Guide"
+    href="/Mobile User Guide"
     icon="/icons/mobile-screen-button-solid">
     Signing into the company portal using the Next Level3 Mobile app.
     </Card>
@@ -203,7 +203,7 @@ You will need:
 
 Once you have set up your integrations, the next step is utilizing the Activity Log and Cyber Policy features.
 
-<Card title="Activity Logs and Cyber Policies" href="/docs/Features/Cyber Policies and Activity Logs">
+<Card title="Activity Logs and Cyber Policies" href="/Features/Cyber Policies and Activity Logs">
   Monitoring Activity and Managing Policies
 </Card>
 
