--- a/Features/Cyber Policies and Activity Logs.mdx
+++ b/Features/Cyber Policies and Activity Logs.mdx
@@ -25,7 +25,7 @@ Currently, there are three policy types supported by the Next Level3 Cloud Ident
 ### Scheduled Policies
 Scheduled policies are used to lock and unlock accounts at a specific time. They can be scheduled to run starting on a specific date and can optionally have an end date. To create a new scheduled policy, click the add new policy button in the Policy Manager.
 
-<img src="/images/policy1.png">
+[policy](/images/policy1.png)
 
 This will create a new policy and allow you to specify the following;
 
@@ -42,20 +42,20 @@ This will create a new policy and allow you to specify the following;
 
 **EXAMPLE SCHEDULED POLICY**
 
-<img src="/images/policy2.png">
+[policy](/images/policy2.png)
 
 ### Applying Scheduled Policies
 Once the Scheduled policy is created it can be applied. To apply the policy, you are selecting the list of users/group accounts that the scheduled policy will be applied to. To apply the policy, click the "Assign Groups to Policy" button on the Policy Management page for that policy.
 
 **EXAMPLE "ASSIGN GROUPS TO POLICY" ACTION**
 
-<img src="/images/policy3.png">
+[policy](/images/policy3.png)
 
 You will then need to assign users and/or groups to the policy by selecting them in the list to the left and moving them to the right by using the ">" button or assigning all users and groups by using the ">>" button.
 
 **EXAMPLE SCHEDULED POLICY ASSIGNMENT**
 
-<img src="/images/policy4.png">
+[policy](/images/policy4.png)
     </Tab>
     <Tab icon="/icons/circle-exclamation-solid.svg" title="Alert">
 
@@ -70,7 +70,7 @@ Alert policies are designed to act as a safeguard in the event of scenarios such
 
 To create a new Alert policy, click the add new policy button in the Policy Manager.
 
-<img src="/images/policy1.png">
+[policy](/images/policy1.png)
 
 This will create a new policy and allow you to specify the following;
 
@@ -83,20 +83,20 @@ This will create a new policy and allow you to specify the following;
 
 **EXAMPLE ALERT POLICY**
 
-<img src="/images/policy5.png">
+[policy](/images/policy5.png)
 
 ### Applying Alert Policies
 Once the Alert policy is created it can be applied. To apply the policy, you are selecting the list of users/group accounts that the alert policy will be applied to. To apply the policy, click the "Assign Groups to Policy" button on the Policy Management page for that policy.
 
 **EXAMPLE "ASSIGN GROUPS TO POLICY" ACTION**
 
-<img src="/images/policy6.png">
+[policy](/images/policy6.png)
 
 You will then need to assign users and/or groups to the policy by selecting them in the list to the left and moving them to the right by using the ">" button or assigning all users and groups by using the ">>" button.
 
 **EXAMPLE ALERT POLICY ASSIGNMENT**
 
-<img src="/images/policy7.png">
+[policy](/images/policy7.png)
 
 ### Executing Alert Policies
 **Manually**
@@ -104,7 +104,7 @@ Alert policies can be executed directly in the Company Management portal by clic
 
 **EXAMPLE OF EXECUTING AN ALERT POLICY**
 
-<img src="/images/policy8.png">
+[policy](/images/policy8.png)
 
 **Programmatically**
 Alert policies can also be executed programmatically. To execute an alert policy programmatically you can call the Next Level3 API.
@@ -125,7 +125,7 @@ Multi Approval policies enable you to define a secondary approver who must appro
 
 To create a new Multi-Approval policy, click the add new policy button in the Policy Manager.
 
-<img src="/images/policy1.png">
+[policy](/images/policy1.png)
 
 This will create a new policy and allow you to specify the following;
 
@@ -138,19 +138,19 @@ This will create a new policy and allow you to specify the following;
 
 **EXAMPLE MULTI-APPROVAL POLICY**
 
-<img src="/images/policy9.png">
+[policy](/images/policy9.png)
 
 ### Applying Multi-Approval Policies
 
 Once the Multi-Approval policy is created it can be applied. To apply the policy, you are selecting the list of users/group accounts for which secondary approval will be required prior to unlocking. To apply the policy, click the Assign Groups to Policy button on the Policy Management page for that policy.
 
-<img src="/images/policy10.png">
+[policy](/images/policy10.png)
 
 You will then need to assign users and/or groups to the policy by selecting them in the list to the left and moving them to the right by using the ">" button or assigning all users and groups by using the ">>" button.
 
 **EXAMPLE MULTI-APPROVAL POLICY ASSIGNMENT
 
-<img src="/images/policy11.png">
+[policy](/images/policy11.png)
     </Tab>
 </Tabs>
 
@@ -162,4 +162,4 @@ Filter By Name: You can filter the current results on the page by username.
 
 Search By Name: You can search the logs of all records by username.
 
-<img src="/images/Activity.png">
+[Activity](/images/Activity.png)
