--- a/Features/Integrations.mdx
+++ b/Features/Integrations.mdx
@@ -16,18 +16,18 @@ description: 'Identity Service Providers and Native languages'
   To get started first choose the identity provider your application uses and then follow the instructions to enable Next Level3 Cloud Identity JIT Access for that provider.
 
 ### Identity Provider Integration Instrcutions
-  <Tabs>
-      <TabItem value="/Tabs/auth0.md" title="Auth0">
-      </TabItem>
-      <TabItem value="/Tabs/MAAD.md" title="Microsoft Azure AD B2C">
-      </TabItem>
-      <TabItem value="/Tabs/MAADO365.md" title="Microsoft Azure AD and O365">
-      </TabItem>
-      <TabItem value="/Tabs/AWSCog.md" title="AWS Cognito">
-      </TabItem>
-      <TabItem calue="/Tabs/AWSIAM.md" title="AWS IAM">
-      </TabItem>
-  </Tabs>
+  <AccordionGroup>
+      <Accordion href="/Tabs/auth0.md" title="Auth0">
+      </Accordion>
+      <Accordion href="/Tabs/MAAD.md" title="Microsoft Azure AD B2C">
+      </Accordion>
+      <Accordion href="/Tabs/MAADO365.md" title="Microsoft Azure AD and O365">
+      </Accordion>
+      <Accordion href="/Tabs/AWSCog.md" title="AWS Cognito">
+      </Accordion>
+      <Accordion href="/Tabs/AWSIAM.md" title="AWS IAM">
+      </Accordion>
+  </AccordionGroup>
 
 ## Native Language Support
 For more information about integrations and examples of implementing them please view the Native Language Support page:
