--- a/Features/Integrations.mdx
+++ b/Features/Integrations.mdx
@@ -17,15 +17,15 @@ description: 'Identity Service Providers and Native languages'
 
 ### Identity Provider Integration Instrcutions
   <AccordionGroup>
-      <Accordion href="/Tabs/auth0.md" title="Auth0">
+      <Accordion href="/Tabs/auth0.mdx" title="Auth0">
       </Accordion>
-      <Accordion href="/Tabs/MAAD.md" title="Microsoft Azure AD B2C">
+      <Accordion href="/Tabs/MAAD.mdx" title="Microsoft Azure AD B2C">
       </Accordion>
-      <Accordion href="/Tabs/MAADO365.md" title="Microsoft Azure AD and O365">
+      <Accordion href="/Tabs/MAADO365.mdx" title="Microsoft Azure AD and O365">
       </Accordion>
-      <Accordion href="/Tabs/AWSCog.md" title="AWS Cognito">
+      <Accordion href="/Tabs/AWSCog.mdx" title="AWS Cognito">
       </Accordion>
-      <Accordion href="/Tabs/AWSIAM.md" title="AWS IAM">
+      <Accordion href="/Tabs/AWSIAM.mdx" title="AWS IAM">
       </Accordion>
   </AccordionGroup>
 
