--- a/Features/Users, Groups, and Endpoints.mdx
+++ b/Features/Users, Groups, and Endpoints.mdx
@@ -83,8 +83,8 @@ Clicking the "Return" option will cancel any pre-saving changes made to the grou
 <img src="/images/Group Management/Group3.png" />
 
 ## Protecting Endpoints
-<Tabs>
-    <Tab icon="/icons/windows.svg" title="Windows">
+<AccorionGroup>
+    <Accordion icon="/icons/windows.svg" title="Windows">
 ## Windows
 
 ### Prerequisites
@@ -126,8 +126,8 @@ You will need:
 
     The following command can be entered to give designated users NextLevel3 MFA bypass privileges:
     <img src="/images/pam/pam8.png" />
-    </Tab>
-    <Tab icon="/icons/linux.svg" title="Linux">
+    </Accordion>
+    <Accordion icon="/icons/linux.svg" title="Linux">
 ## Linux
 
 ### Prerequisites
@@ -193,11 +193,11 @@ You will need:
     "AccountTry": [ "breakglass", "second-account" ]
     "GroupTry": [ "wheel", "staff" ]
     ```
-    </Tab>
-    <Tab icon="/icons/apple.svg" title="MacOS">
+    </Accordion>
+    <Accordion icon="/icons/apple.svg" title="MacOS">
     ## Apple... Coming soon!
-    </Tab>
-</Tabs
+    </Accordion>
+</AccordionGroup>
 
 ## Step 5. Monitoring Activity and Managing Cyber Policies
 
